[PFM-3695] : header alignemnt fix for the HRMS card

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
@@ -762,6 +762,11 @@ input[type="number"] {
   }
 }
 
+.complaint-links-container .header .removeHeight {
+  line-height: 28px;
+  overflow-wrap: anywhere;
+}
+
 @screen sm {
   .employeeCard {
     .card-section-header {
